--- a/style.css
+++ b/style.css
@@ -7,24 +7,108 @@
 @font-face {
     font-family: Cairo Regular;
     src: url("inc/css/fonts/Cairo-Regular.woff2") format("woff2");
-} 
+}
+a{
+	text-decoration: none !important;
+	color:#fff;
+}
+a:hover {
+    color: #00a696;
+}
+li{
+	list-style-type: none;
+}
+.color-divider-line{
+	border-top: 5px solid #00a696;
+	width: 100% !important;
+}
 body{
 	font-family: Cairo Regular;
+	background-color: #fcfcfc;
 }
-@media (max-width: 576px){
-	.post-item .post-description{
-		display: none;
-	}
-}
+
 .header{
-	height: 200px;
-	background-image: url(screenshot.png);
+	/*background-image: url(http://issoundq.hostkda.com/wp-content/uploads/2019/08/download-1-6-840x540.jpg);*/
 	background-size: cover;
 	background-position: center;
 }
+
 .header-content{
 	background: #343a4033;
 	width: 100% !important;
+}
+.header .search-area{
+	width: 100% !important;
+	height: 100% !important;
+	background: rgb(52,58,64,0.9);
+	display: -webkit-flex; /* Safari */
+    -webkit-justify-content: center; /* Safari 6.1+ */
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-content: center;
+	transition: .35s;
+	position: fixed;
+	z-index: 9;
+	top: -100%;
+}
+.header .search-area .search-box{
+	min-height: 30% !important;
+	width: 80% !important;
+}
+.header .search-area .search-input{
+	background: transparent;
+    border: none;
+    border-bottom: 1px solid;
+    border-radius: 0;
+    color:#fff;
+}
+.header .search-area .fa-close{
+	font-weight: bolder;
+    position: absolute;
+    top: 15px;
+    right: 5px;
+}
+/*
+*
+* Big Slider
+*
+*/
+
+.big-slider{
+    width: 100%;
+    position: relative;
+}
+.big-slider:before{
+    content: "";
+    display: block;
+    padding-top: 50%;
+}
+
+.big-slider .slide-item{
+	height: 100%;
+	width: 100%;
+    background-size: cover;
+	background-position: center;
+	position: absolute;
+    top: 0;
+}
+.big-slider .slide-item .silde-content{
+	background-image: linear-gradient(to top left , #000 20% , transparent);
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	left: 0;
+	top: 0;
+	display: flex;
+	align-content: space-between;
+	display: inline-grid;
+	align-content: space-between;
+	text-align: right;
+	padding: 5%;
+}
+.big-slider .slide-item .post-time-ago{
+    color: #00a696;
 }
 nav.top-nav{
 	background: #343a40;
@@ -33,19 +117,83 @@ nav.top-nav{
 nav.top-nav a{
 	color:#fff;
 }
+
+nav.top-nav .menu{
+	padding: 5px 0;
+	text-align: right;
+	margin-top: 2px;
+}
+nav.top-nav  ul , nav.header-menu-nav ul{
+	margin: 0;
+	display: inline;
+}
+
+nav.top-nav ul li , nav.header-menu-nav ul li{
+	display: inline;
+	list-style-type: none;
+	margin: 0 5px;
+}
+nav.top-nav a{
+	color:#fff;
+	font-weight: bold;
+}
+
+nav.header-menu-nav {
+	white-space: nowrap;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	overflow-y: hidden;
+	overflow-x: auto;
+	-webkit-overflow-scrolling: touch;
+	-ms-overflow-style: -ms-autohiding-scrollbar;
+	padding: 10px;
+	border-top: 1px solid #00a696;
+}
 .post-main{
 	border-top: 5px solid #00a696;
-}
-.post-item{
-	margin-top: 10px;
+	margin: 0;
+	display: block;
 	text-align: center;
+	padding-top: 5px;
 }
-.post-item .post-thumbnail{
+.post-item , .big-post-item{
+	background-color: #fff;
+	margin-bottom: 10px;
+	text-align: center;
+	box-shadow: 0 3px 5px 0 rgba(0, 1, 1, .1);
+	position: relative;
+
+}
+.big-post-item{
+	margin: 0px 2px 10px 2px;
+	display: inline-table;
+	max-width: 49%;
+}
+.post-item::after{
+	content: '';
+    position: absolute;
+    width: 0;
+    opacity: 0;
+    height: 100%;
+    left: 0;
+    top: 0;
+    background-color: #00a696;
+    -webkit-transition: all .4s ease;
+    -o-transition: all .4s ease;
+    transition: all .4s ease;
+}
+.post-item:hover:after{
+    width: 5px;
+    opacity: 1;
+}
+.post-item .post-thumbnail , .big-post-item .post-thumbnail{
 	height: 200px;
 	padding: 0;
 	overflow: hidden;
 }
-.post-item .post-category{
+.post-item .post-category , .big-post-item .post-category , .big-slider .post-category{
 	padding: 5px;
 	margin: 5px;
     position: absolute;
@@ -54,31 +202,38 @@ nav.top-nav a{
     background: #000;
     border-radius: 5px;
 }
-.post-item .post-category a{
+.post-item .post-category a .big-post-item .post-category a{
 	color: #fff;
 }
-.post-item .post-thumbnail-img:hover{
-	transform: scale(1.2) rotate(30deg) ;
 
-}
-.post-item .post-thumbnail-img{
+.post-item img , .big-post-item img{
 	position: relative;
-	
 	width: 100%;
 	height: 100%;
-	transition: .5s;
 }
-.post-item .post-details{
-	text-align: right;
+.post-item .post-details , .big-post-item .post-details{
 	display: -webkit-flex;
     display: flex;
+    padding-bottom: 10px;
+	text-align: right;
     -webkit-flex-wrap: wrap;
     flex-wrap: wrap;
     -webkit-align-content: space-between;
     align-content: space-between;
+    width: 100% !important;
+}
+.post-details .header-block , .post-details .footer-block{
+	width: 100% !important;
+	
 }
 
-.post-item .post-details .post-title a{
+.post-details .footer-block{
+	display: inline-flex;
+    -webkit-justify-content: space-between;
+    justify-content: space-between;
+}
+
+.post-item .post-details .post-title a , .big-post-item .post-details .post-title a{
 	font-weight: 600;
     color: #1f1f1f;
     font-size: 20px;
@@ -86,14 +241,385 @@ nav.top-nav a{
     text-align: right;
     line-height: 1.3;
 }
+.post-item .post-details .post-description , .big-post-item .post-details .post-description{
+    color: #4d4d4d;
+}
 
-.post-item .post-time-ago{
+.post-item .post-time-ago , .big-post-item .post-time-ago{
 	font-size: 11px;
 	text-align: right;
 	font-weight: 600;
 	line-height: 17px;
 	
 }
+
+.big-post-item .post-category{
+    right: 0;
+}
+.big-post-item .post-category a{
+	color: #fff;
+}
+
+.big-post-item .post-thumbnail{
+	margin: 0 -15px;
+}
+.big-post-item .post-thumbnail-img{
+	width: 100%;
+}
+.share-post{
+	display: inline;
+	direction: ltr;
+
+}
+.share-post .share-btns{
+	transition: .3s;
+	display: none;
+	cursor: pointer;
+}
+.share-post .fa{
+	cursor: pointer;
+}
+.share-post:hover > .share-btns{
+	display: inline;
+}
 .sidebar{
+	background: #fff;
 	border-top: 5px solid #00a696;
+    text-align: right;
+    padding: 0;
+    margin: 0 auto;
+    display: block;
+}
+
+.sidebar .post-item{
+	margin: 2.5px 0 !important;
+}
+
+.slideshow{
+	position: relative;
+	width: 100%;
+}
+.slideshow:after {
+  content: "";
+  display: block;
+  padding-bottom: 100%;
+}
+.slideshow .slide-item{
+	position: absolute;
+    width: 100%;
+    height: 100%;
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;
+}
+
+.slideshow .slide-item h4.post-title{
+    text-align: justify;
+}
+.slideshow .slide-item .after{
+	width: 100%;
+	height: 100%;
+	text-align: right;
+	display: -webkit-flex;
+	padding: 5%;
+    display: flex;
+    -webkit-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-align-content: space-between;
+    align-content: space-between;
+    background-image: linear-gradient(to top left , #000 , transparent);
+}
+.slide-item .after .post-time-ago{
+	color: #00a696;
+}
+.hide{
+	display: none;
+}
+.widget-item-Area{
+	width: 100%;
+}
+.big-post-item .post-title{
+		min-height: 80px;
+	}
+@media (max-width: 767px){
+	.post-main{
+	    border-top: none;
+	    padding-top: 0;
+	}
+
+	.post-item::after{
+		display: none;
+	}
+	.big-post-item{
+		max-width: none;
+	}
+	.body-warp{
+		/*padding: 0;*/
+	}
+	.posts-pagination{
+		margin: 10px 0px 10px 0px;
+	}
+	.post-header{
+	display: flex;
+    flex-wrap: wrap-reverse;
+}
+    .big-slider:before{
+    	content: "";
+    display: block;
+        padding-top: 75%;
+    }
+
+
+}
+/* Fading animation */
+.fade2 {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+  opacity: 1 ;
+}
+.fadebtn {
+  -webkit-animation-name: btnfade;
+  -webkit-animation-duration: .5s;
+  animation-name: btnfade;
+  animation-duration: .5s;
+  opacity: 1 ;
+}
+@-webkit-keyframes btnfade {
+  from {opacity: 0}
+  to {opacity: 1}
+}
+
+@keyframes btnfade {
+  from {opacity: 0}
+  to {opacity: 1}
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+.post-content{
+	text-align: right;
+}
+.single-post .post-content{
+	font-size: 18px;
+    line-height: 1.77778;
+    color: #1f1f1f;
+    text-align: justify;
+
+}
+.post-content h1{
+	margin-top: 5px;
+	font-weight: bold;
+	text-align: justify;
+}
+.single-post h2{
+	border-right: #00a696 5px solid;
+	margin-top: 10px;
+	padding-right: 10px;
+	font-weight: bold;
+}
+
+.post-header .post-info{
+	margin: 10px 0px;
+    text-align: right;
+}
+.post-header .post-info .post-time-ago, .post-header .post-info .post-author{
+	float:left;
+	font-size: 14px;
+}
+.post-header .attachment-post-thumbnail{
+	width: 100%;
+}
+.post-header .post-title{
+	font-size: 2rem;
+	margin: 20px 0;
+}
+.post-content .wp-block-image , .post-header .post-thumbnail{
+	max-width: none;
+	min-width: 100%;
+    margin-left: -15px;
+    margin-right: -15px;
+}
+.wp-block-image img{
+	width: 100% !important;
+}
+.wp-block-image {
+    position: relative;
+}
+
+.wp-block-image figcaption {
+	width: 100%;
+	position: absolute;
+	bottom: 0;
+	background: rgba(0,0,0 ,.65);
+	color: #fff;
+	padding: 2px;
+}
+.post-tags-list{
+	margin-bottom: 20px;
+	font-weight: bold;
+	text-align: right;
+}
+.single-post .post-tag{
+	margin: 0px 3px;
+	padding: 2px 5px;
+	border-radius: 5px;
+}
+.post-content a{
+	color: #00a696;
+	font-weight: bolder;
+    text-decoration: underline !important;
+}
+.color-top-border{
+	border-top: #00a696 5px solid !important;
+}
+.similar-posts{
+
+}
+.similar-posts .post-thumbnail {
+	position: relative;
+} 
+.similar-posts .post-thumbnail a{
+	color:#fff !important;
+} 
+.similar-posts  .footer-block {
+	padding: 0 10px;
+} 
+.similar-posts  .post-details {
+	position: absolute;
+	bottom: 0;
+	color:#fff;
+	height: 60%;
+	max-height: 60%;
+    background: rgba(0,0,0 ,.65);
+
+} 
+.comments-area{
+
+}
+.footer{
+	background: #343a40;
+	color: #fff;
+	padding: 5px;
+	text-align: center;
+	margin: 0 !important;
+}
+.footer .footer-block b.blogtitle{
+	font-size: 40pt;
+	border-bottom: 5px solid #00a696;
+}
+.footer .footer-block li{
+	transition: .05s;
+    padding-right: 5px;
+    margin: 5px 0;
+}
+.footer .footer-block li:hover{
+	border-right: 3px solid #00a696;
+}
+.footer .footer-block ul {
+	padding-right: 5px;
+    margin-right: 5px;
+}
+.footer .footer-block .smi{
+	color: #fff;
+	font-size: 22pt;
+	text-decoration: none;
+	margin: 6px;
+}
+.copyright-bar{
+	background: #343a40;
+	color: #fff;
+	border-top: #00a696 1px solid;
+	padding: 5px;
+	text-align: center;
+}
+.copyright-bar a{
+	color: #fff;
+}
+.posts-pagination nav{
+	display: block;
+
+}
+.posts-pagination .page-numbers{
+	text-decoration: none !important;
+	color: #fff;
+	background: #343a40;
+	padding: 0px 10px;
+	border-radius: 5px;
+	font-weight: bolder;
+}
+.posts-pagination .current{
+	background: #00a696;
+}
+
+/**
+*
+* Autor Page
+*
+*/
+
+.posts-author-card{
+	width: 100%;
+	margin: 2.5% 1.5%;
+}
+.posts-author-card .author-pic img{
+	height: 150px !important;
+	width: 150px !important;
+	margin-bottom: 5px;
+}
+.posts-author-card .author-nickname{
+	
+}
+.posts-author-card .s-media-icons a {
+	color:#000;
+}
+.divider-line{
+	width: 100% !important;
+}
+
+.widget-item-Area .widget-title{
+	margin: 5px 0;
+	padding: 0 5px;
+	border-right: 5px solid #00a696;
+}
+
+@-webkit-keyframes sildeshow-backgroun-position {
+  from {background-position-x: 0%}
+  to {background-position-x: 100%}
+}
+
+@keyframes sildeshow-backgroun-position {
+  from {background-position-x: 0%}
+  to {background-position-x: 100%}
+}
+
+.hp-img-loader-img{
+	position: relative;
+}
+
+.hp-img-loader{
+	height: 100%;
+	width: 100%;
+	background-color: #000;
+	position: absolute;
+	top: 0;
+	z-index: 99;
+}
+.hp-img-loader-txt{
+	margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #fff;
+    opacity: 0.7;
+    transition: .2s;
 }
